@@ -1,11 +1,11 @@
 /* macro.c -- user-defined macros for Texinfo.
    $Id$
 
-   Copyright (C) 1998, 1999, 2002, 2003, 2005 Free Software Foundation, Inc.
+   Copyright (C) 1998, 1999, 2002, 2003, 2005, 2007 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
+   the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
    This program is distributed in the hope that it will be useful,
